# cursworK

./: .env_template  README.md  pyproject.toml
src/: reports.py
test/: test_services.py
